--- a/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
+++ b/06_Paper/ER-ED/ERED_Stage2/Manuscript_ERED_Stage2.tex
@@ -185,14 +185,14 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Estimating individual subjective values of emotion regulation strategies},
-  pdfauthor={Christoph Scheffel,1, Josephine Zerna,1, Anne Gärtner1, Denise Dörfel1, \& Alexander Strobel1},
+  pdfauthor={Christoph Scheffel,1, Josephine Zerna,1, Anne Gärtner1, Denise Dörfel1,2, \& Alexander Strobel1},
   pdflang={en-EN},
   pdfkeywords={emotion regulation, regulatory effort, effort discounting, registered report, specification curve analysis},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 
 \title{Estimating individual subjective values of emotion regulation strategies}
-\author{Christoph Scheffel\textsuperscript{$\dagger{}$,1}, Josephine Zerna\textsuperscript{$\dagger{}$,1}, Anne Gärtner\textsuperscript{1}, Denise Dörfel\textsuperscript{1}, \& Alexander Strobel\textsuperscript{1}}
+\author{Christoph Scheffel\textsuperscript{$\dagger{}$,1}, Josephine Zerna\textsuperscript{$\dagger{}$,1}, Anne Gärtner\textsuperscript{1}, Denise Dörfel\textsuperscript{1,2}, \& Alexander Strobel\textsuperscript{1}}
 \date{}
 
 
@@ -206,7 +206,7 @@ Correspondence concerning this article should be addressed to Christoph Scheffel
 
 }
 
-\affiliation{\vspace{0.5cm}\textsuperscript{1} Faculty of Psychology, Technische Universität Dresden, 01069 Dresden, Germany}
+\affiliation{\vspace{0.5cm}\textsuperscript{1} Chair of Differential and Personality Psychology, Faculty of Psychology, Technische Universität Dresden, 01069 Dresden, Germany\\\textsuperscript{2} Center for Information Services and High Performance Computing, Technische Universität Dresden, 01069 Dresden, Germany}
 
 \abstract{%
 Individuals have a repertoire of emotion regulation (ER) strategies at their disposal, which they can use more or less flexibly.
@@ -747,30 +747,43 @@ However, individual SVs did not show associations with ER flexibility, we theref
 Our goal was to calculate individual subjective values to develop a better understanding of ER stratagem selection.
 Most individuals show great variability in the choice of strategies, both, within-strategy and between-strategy\textsuperscript{17,69,70}.
 Greater variability might even adaptive\textsuperscript{12,17}.
-In addition, a wide variety of factors that influence the choice of stratgies in specific situations were examined\textsuperscript{20--22,71,72}.
-Thus, different factors have only rarely been studied together\textsuperscript{72}.
-Moreover, the usual paradigms used in ER choice research (e.g., Sheppes et al.\textsuperscript{21}) cannot be used to determine what internal subjective value the subjects associated with the strategies.
-However, we succeeded in this with our new CAD paradigm.
+In addition, a wide variety of factors that influence the choice of strategies in specific situations were examined\textsuperscript{20--22,71--73}, including intensity of the situation and effort.
+However, these factors have often been studied separately.
+Only rarely have effects of the factors been studied in combination\textsuperscript{72}.
+Moreover, the usual paradigms used in ER choice research (e.g., Sheppes et al.\textsuperscript{21}) can only estimate how a factor tends to drive the choice in one direction or the other.
+However, it cannot be determined in this way what internal subjective value individuals attribute to the choice options.
+We are confident that we have succeeded in this with the present paradigm.
 On the one hand, we were able to show which factors influence the values, but on the other hand, we were able to show the actual practical relevance of the values.
 The highest SVs of the individuals were associated with the choice made by the participants.
 Until now, it has been difficult to transfer such findings from the laboratory to everyday life\textsuperscript{71}.
-This could be due to the fact that the strategies that have to be chosen between are often fixed in laboratory tests by the experimental design\textsuperscript{20--22}.
+This may be due to the fact that in laboratory studies, the choice options are often predetermined by the design of the experiment\textsuperscript{20--22}.
 It was therefore attempted to investigate ER choice and influencing factors in everyday life.
-However, even there, certain strategies were often prescribed (for example studies, see English et al.\textsuperscript{73}, Millgram et al.\textsuperscript{74}, Wilms et al.\textsuperscript{71}).
+However, even there, certain strategies were often prescribed (for example studies, see English et al.\textsuperscript{74}, Millgram et al.\textsuperscript{75}, Wilms et al.\textsuperscript{71}).
 Although these covered a large area of the emotion-genesis process\textsuperscript{2}, they were nevertheless ultimately fixed.
 Of course, the calculation of SVs in our new CAD paradigm is tied to the strategies with which the strategy of interest is compared.
-However, it would be possible to use ecological momentary assessment to capture ER strategies\textsuperscript{75}.
+However, it would be possible to use ecological momentary assessment to capture ER strategies\textsuperscript{76}.
 This would allow all strategies of the ER repertoire to be recorded for each individual\textsuperscript{12}.
-Also those that are rarely used or even marked as maladaptive, such as alcohol consumption or rumination\textsuperscript{76}.
+Also those that are rarely used or even marked as maladaptive, such as alcohol consumption or rumination\textsuperscript{77}.
 
-Dynamic processes in emotion regulation choice
-Jonathan W. Murphy
-\& Michael A. Young
+In order to draw a more comprehensive picture on ER, dynamic or cyclic processes have to be considered.
+The extended process model of emotion regulation\textsuperscript{33} postulates three sequential stages, namely identification, selection, and implementation, to achieve a given goal in a situation.
+If it is determined that the regulation goal is not being achieved, the ER strategy can be maintained, stopped or switched\textsuperscript{33}.
+Importantly, information about the effects of implementing ER strategies influences the choice of ER strategies in future situations, due to contextual feedback even changes the context\textsuperscript{33,78--80}.
+This means that for studies on ER Choice, not only situational factors should be taken into account, but also contextual factors\textsuperscript{79}.
+For example, Murphy and Young\textsuperscript{79} could show that in a classic ER choice paradigm\textsuperscript{21}, strategy selection was significantly influenced by strategy selection and negative affect of the preceding trial.
+This provides empirical evidence that experience gained during use of ER strategies influences future choice of ER strategies.
+Our newly developed paradigm also makes an important contribution here.
+The information and experiences that participants gather when using strategies subsequently flow implicitly into the calculation of subjective values.
+That is, because the participants first go through all the strategies and then make the monetary decisions on the basis that they should repeat the strategies again.
+The decisions are made on the basis of the stimulus material that the individuals previously viewed.
+Therefore, the question arises as to how stable these individual SVs are.
 
 \hypertarget{trait-character-of-svs}{%
 \subsection{Trait character of SVs}\label{trait-character-of-svs}}
 
-Hat das Trait-Charakter?
+From relatively early on in ER research, the question was asked whether the use of certain strategies is habitual, i.e.~whether they have a trait character\textsuperscript{9}.
+
+The individual SVs computed in our CAD paradigm were assessed in the laboratory in a single situation.
 
 State character of goals\textsuperscript{71}
 
@@ -780,9 +793,9 @@ State character of goals\textsuperscript{71}
 Our findings must be considered in light of several limitations.
 First, it must be mentioned that a block design was used.
 This allows for habituation effects of EMG activity within the block.
-However, block designs are common in ER research\textsuperscript{77} and were used in previous studies\textsuperscript{78}.
+However, block designs are common in ER research\textsuperscript{81} and were used in previous studies\textsuperscript{82}.
 Second, it has to be mentioned that subjective arousal, effort, and utility ratings were conducted retrospectively at the end of each block.
-It is also known that affect labeling might attenuate emotional experience\textsuperscript{79,80}.
+It is also known that affect labeling might attenuate emotional experience\textsuperscript{83,84}.
 That is why we decided not to have the ratings done after every image.
 Furthermore, we were able to confirm our manipulation checks, indicating that implementation of ER strategies was successful, both on subjective and physiological levels.
 Taken together, these two facts may have led to slightly lower associations between SVs and predictors.
@@ -800,7 +813,7 @@ Fourth, the highest value during the discounting paradigm was set to 2 € as fi
 Participants should imagine that this was the amount of money they would get when they would repeat this strategy.
 Thus, 2 € as an incentive to repeat an entire regulation block could be quite low.
 However, we chose this amount because, first, we have followed the original paradigm of Westbrook\textsuperscript{29}.
-Further it was shown that at least in cognitive effort discounting, a lower incentive could even increase sensitivity in participants for differences in effort\textsuperscript{81}.
+Further it was shown that at least in cognitive effort discounting, a lower incentive could even increase sensitivity in participants for differences in effort\textsuperscript{85}.
 n the future, however, it should be examined how the level of incentives affects subjective values.
 
 \hypertarget{conclusion}{%
@@ -1103,52 +1116,68 @@ n the future, however, it should be examined how the level of incentives affects
 \CSLLeftMargin{72. }%
 \CSLRightInline{Young, G. \& Suri, G. \href{https://doi.org/10.1080/02699931.2019.1611544}{Emotion regulation choice: A broad examination of external factors}. \emph{Cognition \& Emotion} \textbf{34}, 242--261 (2020).}
 
-\leavevmode\vadjust pre{\hypertarget{ref-English2017}{}}%
+\leavevmode\vadjust pre{\hypertarget{ref-Matthews2021}{}}%
 \CSLLeftMargin{73. }%
+\CSLRightInline{Matthews, M., Webb, T. L., Shafir, R., Snow, M. \& Sheppes, G. Identifying the determinants of emotion regulation choice: A systematic review with meta-analysis. \emph{Cognition and Emotion} 1--29 (2021) doi:\href{https://doi.org/10.1080/02699931.2021.1945538}{10.1080/02699931.2021.1945538}.}
+
+\leavevmode\vadjust pre{\hypertarget{ref-English2017}{}}%
+\CSLLeftMargin{74. }%
 \CSLRightInline{English, T., Lee, I. A., John, O. P. \& Gross, J. J. \href{https://doi.org/10.1007/s11031-016-9597-z}{Emotion regulation strategy selection in daily life: The role of social context and goals}. \emph{Motivation and Emotion} \textbf{41}, 230--242 (2017).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Millgram2019}{}}%
-\CSLLeftMargin{74. }%
+\CSLLeftMargin{75. }%
 \CSLRightInline{Millgram, Y., Sheppes, G., Kalokerinos, E. K., Kuppens, P. \& Tamir, M. \href{https://doi.org/10.1037/xge0000477}{Do the ends dictate the means in emotion regulation?} \emph{Journal of Experimental Psychology-General} \textbf{148}, 80--96 (2019).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Koval2020}{}}%
-\CSLLeftMargin{75. }%
+\CSLLeftMargin{76. }%
 \CSLRightInline{Koval, P., Kalokerinos, E. K., Verduyn, P. \& Greiff, S. \href{https://doi.org/10.1027/1015-5759/a000599}{Introduction to the special issue capturing the dynamics of emotion and emotion regulation in daily life with ambulatory assessment}. \emph{European Journal of Psychological Assessment} \textbf{36}, 433--436 (2020).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Pena-Sarrionandia2015}{}}%
-\CSLLeftMargin{76. }%
+\CSLLeftMargin{77. }%
 \CSLRightInline{Pena-Sarrionandia, A., Mikolajczak, M. \& Gross, J. J. \href{https://doi.org/ARTN\%20160\%0A10.3389/fpsyg.2015.00160}{Integrating emotion regulation and emotional intelligence traditions: A meta-analysis}. \emph{Frontiers in Psychology} \textbf{6}, (2015).}
 
+\leavevmode\vadjust pre{\hypertarget{ref-AldaoChristensen2015}{}}%
+\CSLLeftMargin{78. }%
+\CSLRightInline{Aldao, A. \& Christensen, K. \href{https://doi.org/10.1080/1047840x.2015.962399}{Linking the expanded process model of emotion regulation to psychopathology by focusing on behavioral outcomes of regulation}. \emph{Psychological Inquiry} \textbf{26}, 27--36 (2015).}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Murphy2018}{}}%
+\CSLLeftMargin{79. }%
+\CSLRightInline{Murphy, J. W. \& Young, M. A. \href{https://doi.org/10.1080/02699931.2017.1419935}{Dynamic processes in emotion regulation choice}. \emph{Cognition \& Emotion} \textbf{32}, 1654--1662 (2018).}
+
+\leavevmode\vadjust pre{\hypertarget{ref-Sheppes2020}{}}%
+\CSLLeftMargin{80. }%
+\CSLRightInline{Sheppes, G. \href{https://doi.org/10.1016/bs.aesp.2019.09.003}{Transcending the "good \& bad" and "here \& now" in emotion regulation: Costs and benefits of strategies across regulatory stages}. \emph{Advances in Experimental Social Psychology, Vol 61} \textbf{61}, 185--236 (2020).}
+
 \leavevmode\vadjust pre{\hypertarget{ref-Barreiros2019}{}}%
-\CSLLeftMargin{77. }%
+\CSLLeftMargin{81. }%
 \CSLRightInline{Barreiros, A. R., Almeida, I., Baia, B. C. \& Castelo-Branco, M. \href{https://doi.org/10.3389/fnhum.2019.00089}{Amygdala modulation during emotion regulation training with fMRI-based neurofeedback}. \emph{Frontiers in Human Neuroscience} \textbf{13}, 89 (2019).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Scheffel2019}{}}%
-\CSLLeftMargin{78. }%
+\CSLLeftMargin{82. }%
 \CSLRightInline{Scheffel, C. \emph{et al.} \href{https://doi.org/10.1017/pen.2019.11}{Cognitive emotion regulation and personality: An analysis of individual differences in the neural and behavioral correlates of successful reappraisal}. \emph{Personality Neuroscience} \textbf{2}, e11 (2019).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Lieberman2007}{}}%
-\CSLLeftMargin{79. }%
+\CSLLeftMargin{83. }%
 \CSLRightInline{Lieberman, M. D. \emph{et al.} \href{https://doi.org/10.1111/j.1467-9280.2007.01916.x}{Putting feelings into words - affect labeling disrupts amygdala activity in response to affective stimuli}. \emph{Psychological Science} \textbf{18}, 421--428 (2007).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Torre2018}{}}%
-\CSLLeftMargin{80. }%
+\CSLLeftMargin{84. }%
 \CSLRightInline{Torre, J. B. \& Lieberman, M. D. \href{https://doi.org/10.1177/1754073917742706}{Putting feelings into words: Affect labeling as implicit emotion regulation}. \emph{Emotion Review} \textbf{10}, 116--124 (2018).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Bialaszek2017}{}}%
-\CSLLeftMargin{81. }%
+\CSLLeftMargin{85. }%
 \CSLRightInline{Bialaszek, W., Marcowski, P. \& Ostaszewski, P. \href{https://doi.org/ARTN\%20e0182353\%0A10.1371/journal.pone.0182353}{Physical and cognitive effort discounting across different reward magnitudes: Tests of discounting models}. \emph{Plos One} \textbf{12}, (2017).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Preece2020}{}}%
-\CSLLeftMargin{82. }%
+\CSLLeftMargin{86. }%
 \CSLRightInline{Preece, D. A., Becerra, R., Robinson, K. \& Gross, J. J. \href{https://doi.org/10.1080/00223891.2018.1564319}{The emotion regulation questionnaire: Psychometric properties in general community samples}. \emph{J Pers Assess} \textbf{102}, 348--356 (2020).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Fleischhauer2010}{}}%
-\CSLLeftMargin{83. }%
+\CSLLeftMargin{87. }%
 \CSLRightInline{Fleischhauer, M. \emph{et al.} \href{https://doi.org/10.1177/0146167209351886}{Same or different? {Clarifying} the relationship of need for cognition to personality and intelligence}. \emph{Personality \& Social Psychology Bulletin} \textbf{36}, 82--96 (2010).}
 
 \leavevmode\vadjust pre{\hypertarget{ref-Fleischhauer2015}{}}%
-\CSLLeftMargin{84. }%
+\CSLLeftMargin{88. }%
 \CSLRightInline{Fleischhauer, M., Strobel, A. \& Strobel, A. \href{https://doi.org/10.1027/1614-0001/a000161}{Directly and indirectly assessed {N}eed for {C}ognition differentially predict spontaneous and reflective information processing behavior}. \emph{Journal of Individual Differences} \textbf{36}, 101--109 (2015).}
 
 \end{CSLReferences}
@@ -1226,7 +1255,7 @@ The german version of the scale showed a high internal consistency (Cronbach's \
 The 10-item version showed a high internal consistency (Cronbach's \(\alpha=.84\)) and a satisfactory retest-reliability of \(r_{tt}=.81\) across 6 month\textsuperscript{49}.
 
 \emph{Emotion Regulation Questionnaire.} Habitual use of reappraisal and suppression is measured using the 10-item Emotion Regulation Questionnaire (ERQ)\textsuperscript{9,50}.
-The scale has items such as ``I keep my emotions to myself'' (ERQ-suppression - 4 items) and ``When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm'' (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach's \(\alpha>.75\))\textsuperscript{82}.
+The scale has items such as ``I keep my emotions to myself'' (ERQ-suppression - 4 items) and ``When I'm faced with a stressful situation, I make myself think about it in a way that helps me stay calm'' (ERQ-reappraisal - 6 items), which are answered on a 7-point Likert scale ranging from 1 (strongly disagree) to 7 (strongly agree), and has acceptable to high internal consistency (Cronbach's \(\alpha>.75\))\textsuperscript{86}.
 
 \emph{FlexER Scale.} Flexible use of ER strategies is assessed using the FlexER Scale\textsuperscript{44} with items such as ``If I want to feel less negative emotions, I have several strategies to achieve this.'', which are answered on a 4-point scale ranging from ``strongly agree'' to ``strongly disagree''.
 Psychometric properties are currently under investigation.
@@ -1235,7 +1264,7 @@ Psychometric properties are currently under investigation.
 4 items such as ``Having to control a strong emotion makes you exhausted and you are less able to manage your feelings right afterwards.'' are rated on a 6-point scale ranging from 1 (fully agree) to 6 (do not agree at all).
 The questionnaire showed an internal consistency of Cronbach's \(\alpha=.87\)\textsuperscript{51}.
 
-\emph{Need for Cognition Scale.} Need for Cognition (NFC) is assessed with the 16-item short version of the German NFC scale\textsuperscript{52}. Responses to each item (e.g., ``Thinking is not my idea of fun'', recoded) are recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and are summed to the total NFC score. The scale shows comparably high internal consistency (Cronbach's \(\alpha>.80\))\textsuperscript{52,83} and a retest reliability of \(r_{tt}=.83\) across 8 to 18 weeks\textsuperscript{84}.
+\emph{Need for Cognition Scale.} Need for Cognition (NFC) is assessed with the 16-item short version of the German NFC scale\textsuperscript{52}. Responses to each item (e.g., ``Thinking is not my idea of fun'', recoded) are recorded on a 7-point Likert scale ranging from -3 (completely disagree) to +3 (completely agree) and are summed to the total NFC score. The scale shows comparably high internal consistency (Cronbach's \(\alpha>.80\))\textsuperscript{52,87} and a retest reliability of \(r_{tt}=.83\) across 8 to 18 weeks\textsuperscript{88}.
 
 \emph{Self-Regulation Scale.} As one measure of self-control, the Self-Regulation Scale (SRS)\textsuperscript{54} is used. The scale has 10 items (e.g., ``It is difficult for me to suppress thoughts that interfere with what I need to do.'', recoded) on a 4-point scale ranging from 1 (not at all true) to 4 (exactly true). It has high internal consistency {[}Cronbach's \(\alpha>.80\);\textsuperscript{54}{]}.
 
