--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -514,6 +514,19 @@ https://onlinelibrary.wiley.com/doi/abs/10.1111/j.1469-8986.1986.tb00676.x?sid=n
    year = {2011},
 }
 
+@article{Haines2016,
+   author = {Haines, S. J. and Gleeson, J. and Kuppens, P. and Hollenstein, T. and Ciarrochi, J. and Labuschagne, I. and Grace, C. and Koval, P.},
+   title = {The Wisdom to Know the Difference: Strategy-Situation Fit in Emotion Regulation in Daily Life Is Associated With Well-Being},
+   journal = {Psychological Science},
+   volume = {27},
+   number = {12},
+   pages = {1651-1659},
+   ISSN = {0956-7976},
+   DOI = {10.1177/0956797616669086},
+   url = {<Go to ISI>://WOS:000390582500011},
+   year = {2016}
+}
+
 @Article{Harris2009,
   author   = {Harris, Paul A. and Taylor, Robert and Thielke, Robert and Payne, Jonathon and Gonzalez, Nathaniel and Conde, Jose G.},
   journal  = {Journal of Biomedical Informatics},
