--- a/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
+++ b/06_Paper/ER-ED/ERED_Stage2/ER_ED.bib
@@ -1050,6 +1050,19 @@ https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6191057/pdf/nihms956496.pdf},
    year = {2015}
 }
 
+@article{Tamir2016,
+   author = {Tamir, M.},
+   title = {Why Do People Regulate Their Emotions? A Taxonomy of Motives in Emotion Regulation},
+   journal = {Personality and Social Psychology Review},
+   volume = {20},
+   number = {3},
+   pages = {199-222},
+   ISSN = {1088-8683},
+   DOI = {10.1177/1088868315586325},
+   url = {https://www.ncbi.nlm.nih.gov/pubmed/26015392},
+   year = {2016}
+}
+
 @article{Tangney2004,
    author = {Tangney, J. P. and Baumeister, R. F. and Boone, A. L.},
    title = {High self-control predicts good adjustment, less pathology, better grades, and interpersonal success},
